--- a/packages/core/src/scss/_partials/_text-constants.scss
+++ b/packages/core/src/scss/_partials/_text-constants.scss
@@ -22,3 +22,4 @@ $line-height-ui: 1;
 $font-weight-thin: 300;
 $font-weight-normal: 400;
 $font-weight-bold: 500;
+$font-weight-medium: $font-weight-bold;
