--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -24,6 +24,7 @@
   // Accordion item.
   &__item {
     border-top: 1px solid $accordion-border-color;
+    margin-bottom: 0;
   }
 
   // Accordion title / toggle button.
@@ -34,9 +35,10 @@
     border-radius: 0;
     border-style: solid;
     border-width: 0;
-    color: $body-font-color;
+    color: $text;
     cursor: pointer;
     display: inline-block;
+    font-family: $font-body;
     font-size: 1.2rem;
     font-weight: 400;
     line-height: normal;
