form: `body` integration task — fix the margins on error summary titles

--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -493,7 +493,7 @@ select[multiple='multiple'] {
     color: $body-font-color;
     font-size: 1.125rem;
     font-weight: 500;
-    margin-bottom: .875rem;
+    margin: 0 0 .875rem 0;
   }
   &_body {
     color: $body-font-color;
