--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -1,50 +1,53 @@
 @import 'global';
 
-// Breadcrumb trail.
-.breadcrumb-trail,
+// Breadcrumb
+.breadcrumb,
 .pane-term-breadcrumb {
   color: $breadcrumb-link;
   list-style: none;
   margin: 0;
   padding: 0;
-}
 
-// Breadcrumb item.
-.breadcrumb {
-  display: inline;
+  // Breadcrumb item
+  &__item {
+    display: inline;
 
-  // Decommissioned element Aug 2017.
-  &__divider {
-    display: none;
-  }
-
-  &::before {
-    content: ' / ';
-    padding: 0 .3rem;
-  }
-
-  &:first-child {
-    &::before {
-      content: '';
+    // Decommissioned element Aug 2017.
+    &__divider {
       display: none;
     }
-  }
-
-  &__link {
-    color: $breadcrumb-link;
 
     &--home {
-      &:hover {
-        text-decoration: none;
+
+    }
+
+    &::before {
+      content: '';
+      padding: 0 0.6rem;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -9 24 24' width='16' height='16' %3E%3Cpath d='M5.145 14.285l6.167-6a.41.41 0 000-.598L5.145 1.715' fill='none' stroke='%23565452' stroke-width='.75' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+    }
+
+    &:first-child {
+      &::before {
+        content: '';
+        display: none;
       }
     }
   }
-}
 
-// Single hyphen version kept for legacy support.
-.breadcrumb-home,
-.breadcrumb--home {
-  font-size: 1.2rem;
+  // Breadcrumb link
+  &__link {
+    color: $breadcrumb-link;
+
+    &:hover {
+      color: $breadcrumb-link;
+    }
+
+    &--home {
+
+    }
+  }
 }
 
 // Term breadcrumbs.
