--- a/packages/core/src/scss/_partials/_text-constants.scss
+++ b/packages/core/src/scss/_partials/_text-constants.scss
@@ -1,7 +1,7 @@
 /* FS: typography. */
 $font-family: "Roboto", Helvetica, Arial, sans-serif;
 $font-family-title: "Montserrat", Helvetica, Arial, sans-serif;
-$font-family-emphasis: "Merriweather", Georgia, serif;
+$font-family-accent: "Merriweather", Georgia, serif;
 
 /* FS: font sizes. */
 $font-size-xxxxl: 2.5rem; /* 40px - H1 */
