--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -1,25 +1,25 @@
+@use '@uq-uidf/core/src/scss/global' as core;
 @import 'global';
 
 // Breadcrumb
-.breadcrumb,
-.pane-term-breadcrumb {
+.breadcrumb {
+  box-sizing: border-box;
+  font-family: core.$font-body;
+  font-size: core.$compass-base-font-size;
+  font-weight: core.$font-weight-normal; // will set font-weight to 400 like the FS version Is currently
+  line-height: core.$compass-base-line-height-ratio;
   color: $breadcrumb-link;
   list-style: none;
   margin: 0;
   padding: 0;
 
+  *, *:before, *:after {
+      box-sizing: border-box;
+  }
+  
   // Breadcrumb item
   &__item {
     display: inline;
-
-    // Decommissioned element Aug 2017.
-    &__divider {
-      display: none;
-    }
-
-    &--home {
-
-    }
 
     &::before {
       content: '';
@@ -39,30 +39,11 @@
   // Breadcrumb link
   &__link {
     color: $breadcrumb-link;
+    text-decoration: none;
 
     &:hover {
       color: $breadcrumb-link;
+      text-decoration: underline;
     }
-
-    &--home {
-
-    }
-  }
-}
-
-// Term breadcrumbs.
-.pane-term-breadcrumb {
-  ul {
-    margin-top: 0;
-    padding: 0;
-  }
-
-  li {
-    display: inline;
-    list-style: none;
-  }
-
-  a {
-    color: $breadcrumb-link;
   }
 }
