--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -1,14 +1,14 @@
-@use "@uq-uidf/foundation-normalise/src/scss/_component" as normalise;
-@use "@uq-uidf/foundation-global/src/scss/_component" as fnd-global;
-@use "@uq-uidf/core/src/scss/_component" as core with (
-  $uq-font-path: "../node_modules/@uq-uidf/core/src/fonts/uq-icons/font",
-  $fa-font-path: "../node_modules/font-awesome/fonts",
-  $uq-bg-image-path: '../node_modules/@uq-uidf/core/src/images'
-);
-@use "@uq-uidf/foundation-grid/src/scss/_component" as grid;
-@use "@uq-uidf/foundation-block-grid/src/scss/_component" as block-grid;
-@use "@uq-uidf/foundation-misc/src/scss/_component" as misc;
-@use "@uq-uidf/body/src/scss/_component" as body;
+// @use "@uq-uidf/foundation-normalise/src/scss/_component" as normalise;
+// @use "@uq-uidf/foundation-global/src/scss/_component" as fnd-global;
+// @use "@uq-uidf/core/src/scss/_component" as core with (
+//   $uq-font-path: "../node_modules/@uq-uidf/core/src/fonts/uq-icons/font",
+//   $fa-font-path: "../node_modules/font-awesome/fonts",
+//   $uq-bg-image-path: '../node_modules/@uq-uidf/core/src/images'
+// );
+// @use "@uq-uidf/foundation-grid/src/scss/_component" as grid;
+// @use "@uq-uidf/foundation-block-grid/src/scss/_component" as block-grid;
+// @use "@uq-uidf/foundation-misc/src/scss/_component" as misc;
+// @use "@uq-uidf/body/src/scss/_component" as body;
 
 // Prevent the @uq-uidf/core from imposing a background colour. Overrides the
 // Foundation 5.5.3 default styling of the body tag.
