--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -14,22 +14,22 @@
   padding: 0;
 
   *, *:before, *:after {
-      box-sizing: border-box;
+    box-sizing: border-box;
   }
   
   // Breadcrumb item
   &__item {
-    display: inline;
+    display: inline-block;
 
-    &::before {
+    &:before {
       content: '';
       padding: 0 0.6rem;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -9 24 24' width='16' height='16' %3E%3Cpath d='M5.145 14.285l6.167-6a.41.41 0 000-.598L5.145 1.715' fill='none' stroke='%23565452' stroke-width='.75' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-5 0 24 24' width='16' height='16' %3E%3Cpath d='M5.145 14.285l6.167-6a.41.41 0 000-.598L5.145 1.715' fill='none' stroke='%23565452' stroke-width='.75' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
       background-repeat: no-repeat;
     }
 
     &:first-child {
-      &::before {
+      &:before {
         content: '';
         display: none;
       }
@@ -38,8 +38,13 @@
 
   // Breadcrumb link
   &__link {
+    display: inline-block;
     color: $breadcrumb-link;
     text-decoration: none;
+    max-width: 250px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &:hover {
       color: $breadcrumb-link;
