--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -1,6 +1,7 @@
 @forward '_partials/spacing-constants';
 @forward '_partials/text-constants';
 @forward '_partials/colour-constants';
+@forward '_partials/space';
 
 /**
  *
