--- a/packages/storybook-html/src/components/core/_space.scss
+++ b/packages/storybook-html/src/components/core/_space.scss
@@ -1,104 +1,104 @@
 @use '@uq-uidf/core/src/scss/global' as *;
 
-.story-space {
+.uqds-space {
   background-color:$transparent-black-75;
   width:$space;
   height:$space;
 }
 
-.story-space-xs{
+.uqds-space-xs{
   width:$space-xs;
   height:$space-xs;
 } 
 
-.story-space-sm {
+.uqds-space-sm {
   width:$space-sm;
   height:$space-sm;
 } 
 
-.story-space-md {
+.uqds-space-md {
   width:$space-md;
   height:$space-md;
 } 
 
-.story-space-lg {
+.uqds-space-lg {
   width:$space-lg;
   height:$space-lg;
 }
 
-.story-space-xl {
+.uqds-space-xl {
   width:$space-xl;
   height:$space-xl;
 }
 
-.story-space-xxl {
+.uqds-space-xxl {
   width:$space-xxl;
   height:$space-xxl;
 }
 
-.story-space-xxxl {
+.uqds-space-xxxl {
   width:$space-xxxl;
   height:$space-xxxl;
 }
 
-.story-space-xxxxl {
+.uqds-space-xxxxl {
   width:$space-xxxxl;
   height:$space-xxxxl;
 }
 
-.story-space-ul {
+.uqds-space-ul {
   width:$space-ul;
   height:$space-ul;
 }
 
-.story-space-uul {
+.uqds-space-uul {
   width:$space-uul;
   height:$space-uul;
 }
 
-.story-space-uuul {
+.uqds-space-uuul {
   width:$space-uuul;
   height:$space-uuul;
 }
 
-.story-space-uuuul {
+.uqds-space-uuuul {
   width:$space-uuuul;
   height:$space-uuuul;
 }
 
 /* Container example */ 
-.story-container {
+.uqds-container {
   background-color:$transparent-black-75;
   display: inline-block;
 }
 
-.story-container-space {
+.uqds-container-space {
   padding:$space;
 }
 
-.story-container-space-lg {
+.uqds-container-space-lg {
   padding:$space-lg;
 }
 
 /* compressed container */ 
-.story-compressed-space-lg {
+.uqds-compressed-space-lg {
   padding:$space-compressed-lg $space-lg;
 }
 
 /* Stretched container */ 
-.story-stretched-space {
+.uqds-stretched-space {
   padding:$space-stretched $space;
 }
 
 /* Stacked container */ 
-.story-container .story-stacked-space {
+.uqds-container .uqds-stacked-space {
   margin-top:$space;
 }
 
-.story-container .story-stacked-space-xs {
+.uqds-container .uqds-stacked-space-xs {
   margin-top:$space-xs;
 }
 
-.story-container .story-stacked-space-lg {
+.uqds-container .uqds-stacked-space-lg {
   margin-top:$space-lg;
 }
