Table component initial build sorted

--- a/packages/storybook-html/src/components/table/table.html
+++ b/packages/storybook-html/src/components/table/table.html
@@ -16,12 +16,12 @@ Width 75%:  <th class="uq-table__header uq-table__header--width-75">
 
 <div class="uq-table__wrapper">
   <table class="uq-table uq-table--striped">
-      <caption class="uq-table__caption">Population of Australian states and territories, September 2020</caption>
+      <caption class="uq-table__caption">Population of Australian states, September 2020</caption>
       <thead class="uq-table__head">
           <tr class="uq-table__row">
-              <th scope="col" class="uq-table__header uq-table__header--width-50">Location</th>
-              <th scope="col" class="uq-table__header uq-table__header--width-25 uq-table__header--numeric">Population</th>
-              <th scope="col" class="uq-table__header uq-table__header--width-25 uq-table__header--numeric">Change over previous year %</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-33">Location</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-33 uq-table__header--numeric">Population</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-33 uq-table__header--numeric">Change over previous year %</th>
           </tr>
       </thead>
       <tbody class="uq-table__body">
