--- a/packages/table/src/scss/_component.scss
+++ b/packages/table/src/scss/_component.scss
@@ -31,7 +31,7 @@
     font-weight: bold;
     text-align: left;
     display: table-caption;
-    padding-bottom: .5rem;
+    padding-bottom: .75rem;
   }
 
   &__head {
@@ -59,10 +59,34 @@
   &__header {
     padding: .75rem;
     text-align: left;
+    border: 1px solid core.$uq-neutral;
 
     &--numeric {
       text-align: right;
     }
+    &--width-10 {
+      width: 10%;
+    }
+    &--width-20 {
+      width: 20%;
+    }
+    &--width-25 {
+      width: 25%;
+    }
+    &--width-30 {
+      width: 30%;
+    }
+    &--width-33 {
+      width: 33.33%;
+    }
+    &--width-50 {
+      width: 50%;
+    }
+    &--width-60 {
+      width: 50%;
+    }
+    &--width-75 {
+      width: 75%;
+    }
   }
-
 }
