--- a/packages/storybook-html/src/components/table/table.html
+++ b/packages/storybook-html/src/components/table/table.html
@@ -15,31 +15,49 @@ Width 75%:  <th class="uq-table__header uq-table__header--width-75">
 -->
 
 <div class="uq-table__wrapper">
-  <table class="uq-table uq-table--striped">
-      <caption class="uq-table__caption">Population of Australian states, September 2020</caption>
+  <table class="uq-table">
+      <caption class="uq-table__caption">Population of Australian States (Sep 2020)</caption>
       <thead class="uq-table__head">
           <tr class="uq-table__row">
-              <th scope="col" class="uq-table__header uq-table__header--width-33">Location</th>
-              <th scope="col" class="uq-table__header uq-table__header--width-33 uq-table__header--numeric">Population</th>
-              <th scope="col" class="uq-table__header uq-table__header--width-33 uq-table__header--numeric">Change over previous year %</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-50">Location</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-25 uq-table__header--align-right">Population</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-25 uq-table__header--align-right">Change over previous year %</th>
           </tr>
       </thead>
       <tbody class="uq-table__body">
+            <tr class="uq-table__row">
+                <td class="uq-table__cell" colspan="3"><strong>States</strong></td>
+            </tr>
           <tr class="uq-table__row">
               <td class="uq-table__cell">New South Wales</td>
-              <td class="uq-table__cell uq-table__cell--numeric">7,670,700</td>
-              <td class="uq-table__cell uq-table__cell--numeric">3.1%</td>
-          </tr>
-          <tr class="uq-table__row">
-              <td class="uq-table__cell">Victoria</td>
-              <td class="uq-table__cell uq-table__cell--numeric">5,996,400</td>
-              <td class="uq-table__cell uq-table__cell--numeric">2.5%</td>
+              <td class="uq-table__cell uq-table__cell--align-right">7,670,700</td>
+              <td class="uq-table__cell uq-table__cell--align-right">3.1%</td>
           </tr>
           <tr class="uq-table__row">
               <td class="uq-table__cell">Queensland</td>
-              <td class="uq-table__cell uq-table__cell--numeric">517,400</td>
-              <td class="uq-table__cell uq-table__cell--numeric">4.0%</td>
+              <td class="uq-table__cell uq-table__cell--align-right">5,996,400</td>
+              <td class="uq-table__cell uq-table__cell--align-right">2.5%</td>
           </tr>
+          <tr class="uq-table__row">
+              <td class="uq-table__cell">South Australia</td>
+              <td class="uq-table__cell uq-table__cell--align-right">517,400</td>
+              <td class="uq-table__cell uq-table__cell--align-right">4.0%</td>
+          </tr>
+          <tr class="uq-table__row">
+                <td class="uq-table__cell">Tasmania</td>
+                <td class="uq-table__cell uq-table__cell--align-right">7,670,700</td>
+                <td class="uq-table__cell uq-table__cell--align-right">3.1%</td>
+            </tr>
+            <tr class="uq-table__row">
+                <td class="uq-table__cell">Victoria</td>
+                <td class="uq-table__cell uq-table__cell--align-right">5,996,400</td>
+                <td class="uq-table__cell uq-table__cell--align-right">2.5%</td>
+            </tr>
+            <tr class="uq-table__row">
+                <td class="uq-table__cell">Western Australia</td>
+                <td class="uq-table__cell uq-table__cell--align-right">517,400</td>
+                <td class="uq-table__cell uq-table__cell--align-right">4.0%</td>
+            </tr>
       </tbody>
   </table>
 </div>
