--- a/packages/table/src/scss/_component.scss
+++ b/packages/table/src/scss/_component.scss
@@ -3,8 +3,7 @@
 
 // Table
 .uq-table {
-  //position: relative;
-  width: 500px;
+  width: 100%;
   margin: 0;
   padding: 0;
   border-collapse: collapse;
@@ -16,43 +15,40 @@
   line-height: core.$compass-base-line-height-ratio;
   color: core.$uq-neutral-dark80;
   list-style: none;
-
-  &:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 1rem;
-    height: 100%;
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000000+0,000000+100&0+0,0.2+100 */
-    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.2) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#33000000',GradientType=0 ); /* IE6-9 */
-    display: none;
-  }
   
   *, *:before, *:after {
     box-sizing: border-box;
   }
 
   &__wrapper {
-    width: 450px;
+    width: 300px;
     overflow-x: auto;
-    background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, core.$uq-white), color-stop(100%, rgba(255, 255, 255, 0))), -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, core.$uq-white), color-stop(100%, rgba(255, 255, 255, 0))), -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, core.$uq-neutral), color-stop(100%, rgba(195, 195, 197, 0))), -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, core.$uq-neutral), color-stop(100%, rgba(195, 195, 197, 0)));
+    background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, core.$uq-white), color-stop(100%, rgba(255, 255, 255, 0))), -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, core.$uq-white), color-stop(100%, rgba(255, 255, 255, 0))), -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, core.$uq-neutral-dark20), color-stop(100%, rgba(195, 195, 197, 0))), -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, core.$uq-neutral-dark20), color-stop(100%, rgba(195, 195, 197, 0)));
     background-image: -webkit-linear-gradient(left, core.$uq-white, rgba(255, 255, 255, 0)), -webkit-linear-gradient(right, core.$uq-white, rgba(255, 255, 255, 0)), -webkit-linear-gradient(left, core.$uq-neutral, rgba(195, 195, 197, 0)), -webkit-linear-gradient(right, core.$uq-neutral, rgba(195, 195, 197, 0));
     background-image: -moz-linear-gradient(left, core.$uq-white, rgba(255, 255, 255, 0)), -moz-linear-gradient(right, core.$uq-white, rgba(255, 255, 255, 0)), -moz-linear-gradient(left, core.$uq-neutral, rgba(195, 195, 197, 0)), -moz-linear-gradient(right, core.$uq-neutral, rgba(195, 195, 197, 0));
     background-image: -o-linear-gradient(left, core.$uq-white, rgba(255, 255, 255, 0)), -o-linear-gradient(right, core.$uq-white, rgba(255, 255, 255, 0)), -o-linear-gradient(left, core.$uq-neutral, rgba(195, 195, 197, 0)), -o-linear-gradient(right, core.$uq-neutral, rgba(195, 195, 197, 0));
     background-image: linear-gradient(left, core.$uq-white, rgba(255, 255, 255, 0)), linear-gradient(right, core.$uq-white, rgba(255, 255, 255, 0)), linear-gradient(left, core.$uq-neutral, rgba(195, 195, 197, 0)), linear-gradient(right, core.$uq-neutral, rgba(195, 195, 197, 0));
     background-position: 0 0, 100% 0, 0 0, 100% 0;
     background-repeat: no-repeat;
-    background-color: white;
+    background-color: core.$uq-white;
     background-size: 4em 100%, 4em 100%, 1em 100%, 1em 100%;
     background-attachment: local, local, scroll, scroll;
+
+    &::-webkit-scrollbar {
+      -webkit-appearance: none;
+      width: 0.75rem;
+      height: 0.75rem;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 0.5rem;
+      border: 1px solid core.$uq-white;
+      background-color: rgba(core.$uq-black, .3);
+    }
   }
 
-  &__caption {
-    position: relative;
+  &__caption, 
+  caption {
     font-size: 1.25rem;
     line-height: core.$compass-base-line-height-ratio;
     font-weight: core.$font-weight-bold;
@@ -62,39 +58,51 @@
     background-color: core.$uq-white;
   }
 
-  &__head {
+  &__head,
+  thead {
     display: table-header-group;
     vertical-align: middle;
-    //background-color: core.$uq-neutral-light20;
-    
+    background-color: rgba(core.$uq-neutral, 0.2);
   }
-  &__body {
+
+  &__body,
+  tbody {
     display: table-row-group;
     vertical-align: top;
   }
 
-  &__row {
+  &__row,
+  tr {
     display: table-row;
   }
-  &__cell {
-    padding: .75rem 1rem;
-    text-align: left;
-    border: 1px solid core.$uq-neutral;
 
-    &--numeric {
-      text-align: right;
+  &__cell,
+  td {
+    padding: .75rem 1rem;
+    border: 1px solid core.$uq-neutral;
+    text-align: left;
+  }
+
+  &__cell {
+    
+    &--align-right {
+      text-align: right !important;
     }
   }
 
-  &__header {
+  &__header,
+  th {
     padding: .75rem 1rem;
     color: core.$uq-purple;
     text-align: left;
     border: 1px solid core.$uq-neutral;
     font-weight: core.$font-weight-bold;
+  }
 
-    &--numeric {
-      text-align: right;
+  &__header {
+
+    &--align-right {
+      text-align: right !important;
     }
     &--width-10 {
       width: 10%;
@@ -125,6 +133,16 @@
     }
     &--width-90 {
       width: 90%;
+    }
+  }
+
+  &.uq-table--striped {
+
+    .uq-table__row {
+
+      &:nth-child(even) {
+        background: rgba(core.$uq-neutral, 0.2);
+      }
     }
   }
 }
