--- a/packages/storybook-html/src/components/table/table.html
+++ b/packages/storybook-html/src/components/table/table.html
@@ -1,63 +1,144 @@
-<h1>Table</h1>
+<h3>Table - Basic tags</h3>
+<div class="uq-table__wrapper">
+    <table class="uq-table">
+        <caption>Types of food and ratings</caption>
+        <thead>
+            <tr>
+                <th scope="col">Type of Food</th>
+                <th scope="col">Calories</th>
+                <th scope="col">Tasty Factor</th>
+                <th scope="col">Average Price</th>
+                <th scope="col">Rarity</th>
+                <th scope="col">Average Rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">Slice of Pizza</th>
+                <td>450</td>
+                <td>95%</td>
+                <td>$5.00</td>
+                <td>Common</td>
+                <td>8/10</td>
+            </tr>
+            <tr>
+                <th scope="row">Hamburger</th>
+                <td>350</td>
+                <td>87%</td>
+                <td>$3.50</td>
+                <td>Common</td>
+                <td>7.5/10</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
-<!--
-Row header:  <th class="uq-table__header" scope="row">
-Column header:  <th class="uq-table__header" scope="col">
--->
 
-<!--
-Width 10%:  <th class="uq-table__header uq-table__header--width-10">
-Width 20%:  <th class="uq-table__header uq-table__header--width-20">
-Width 25%:  <th class="uq-table__header uq-table__header--width-25">
-Width 33%:  <th class="uq-table__header uq-table__header--width-33">
-Width 50%:  <th class="uq-table__header uq-table__header--width-50">
-Width 75%:  <th class="uq-table__header uq-table__header--width-75">
--->
 
+
+<h3>Table - Basic tags & classes</h3>
 <div class="uq-table__wrapper">
   <table class="uq-table">
-      <caption class="uq-table__caption">Population of Australian States (Sep 2020)</caption>
+      <caption class="uq-table__caption">Types of food and ratings</caption>
       <thead class="uq-table__head">
           <tr class="uq-table__row">
-              <th scope="col" class="uq-table__header uq-table__header--width-50">Location</th>
-              <th scope="col" class="uq-table__header uq-table__header--width-25 uq-table__header--align-right">Population</th>
-              <th scope="col" class="uq-table__header uq-table__header--width-25 uq-table__header--align-right">Change over previous year %</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Type of Food</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Calories</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Tasty Factor</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Average Price</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Rarity</th>
+              <th scope="col" class="uq-table__header uq-table__header--width-16">Average Rating</th>
           </tr>
       </thead>
       <tbody class="uq-table__body">
-            <tr class="uq-table__row">
-                <td class="uq-table__cell" colspan="3"><strong>States</strong></td>
-            </tr>
           <tr class="uq-table__row">
-              <td class="uq-table__cell">New South Wales</td>
-              <td class="uq-table__cell uq-table__cell--align-right">7,670,700</td>
-              <td class="uq-table__cell uq-table__cell--align-right">3.1%</td>
+              <th class="uq-table__cell" scope="row">Slice of Pizza</th>
+              <td class="uq-table__cell uq-table__cell--align-right">450</td>
+              <td class="uq-table__cell uq-table__cell--align-right">95%</td>
+              <td class="uq-table__cell uq-table__cell--align-right">$5.00</td>
+              <td class="uq-table__cell">Common</td>
+              <td class="uq-table__cell uq-table__cell--align-right">8/10</td>
           </tr>
           <tr class="uq-table__row">
-              <td class="uq-table__cell">Queensland</td>
-              <td class="uq-table__cell uq-table__cell--align-right">5,996,400</td>
-              <td class="uq-table__cell uq-table__cell--align-right">2.5%</td>
+            <th class="uq-table__cell" scope="row">Hamburger</th>
+            <td class="uq-table__cell uq-table__cell--align-right">350</td>
+            <td class="uq-table__cell uq-table__cell--align-right">87%</td>
+            <td class="uq-table__cell uq-table__cell--align-right">$3.50</td>
+            <td>Common</td>
+            <td class="uq-table__cell uq-table__cell--align-right">7.5/10</td>
           </tr>
-          <tr class="uq-table__row">
-              <td class="uq-table__cell">South Australia</td>
-              <td class="uq-table__cell uq-table__cell--align-right">517,400</td>
-              <td class="uq-table__cell uq-table__cell--align-right">4.0%</td>
-          </tr>
-          <tr class="uq-table__row">
-                <td class="uq-table__cell">Tasmania</td>
-                <td class="uq-table__cell uq-table__cell--align-right">7,670,700</td>
-                <td class="uq-table__cell uq-table__cell--align-right">3.1%</td>
-            </tr>
-            <tr class="uq-table__row">
-                <td class="uq-table__cell">Victoria</td>
-                <td class="uq-table__cell uq-table__cell--align-right">5,996,400</td>
-                <td class="uq-table__cell uq-table__cell--align-right">2.5%</td>
-            </tr>
-            <tr class="uq-table__row">
-                <td class="uq-table__cell">Western Australia</td>
-                <td class="uq-table__cell uq-table__cell--align-right">517,400</td>
-                <td class="uq-table__cell uq-table__cell--align-right">4.0%</td>
-            </tr>
       </tbody>
   </table>
 </div>
+
+
+
+
+<h3>Table - Flex</h3>
+<table class="uq-table uq-table--flex">
+    <caption>Types of food and ratings</caption>
+    <thead>
+        <tr>
+            <th>Type of Food</th>
+            <th>Calories</th>
+            <th>Tasty Factor</th>
+            <th>Average Price</th>
+            <th>Rarity</th>
+            <th>Average Rating</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th data-title="Type of Food" scope="row">Slice of Pizza</th>
+            <td data-title="Calories">450</td>
+            <td data-title="Tasty Factor">95%</td>
+            <td data-title="Average Price">$5.00</td>
+            <td data-title="Rarity">Common</td>
+            <td data-title="Average Rating">8/10</td>
+        </tr>
+        <tr>
+            <th data-title="Type of Food" scope="row">Hamburger</th>
+            <td data-title="Calories">350</td>
+            <td data-title="Tasty Factor">87%</td>
+            <td data-title="Average Price">$3.50</td>
+            <td data-title="Rarity">Common</td>
+            <td data-title="Average Rating">7.5/10</td>
+        </tr>
+    </tbody>
+</table>
+
+
+
+
+<h3>Table - Grid</h3>
+<table class="uq-table uq-table--grid">
+    <caption>Types of food and ratings</caption>
+    <thead>
+        <tr>
+            <th scope="col">Type of Food</th>
+            <th scope="col">Calories</th>
+            <th scope="col">Tasty Factor</th>
+            <th scope="col">Average Price</th>
+            <th scope="col">Rarity</th>
+            <th>Average Rating</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th scope="row">Slice of Pizza</th>
+            <td>450</td>
+            <td>95%</td>
+            <td>$5.00</td>
+            <td>Common</td>
+            <td>8/10</td>
+        </tr>
+        <tr>
+            <th scope="row">Hamburger</th>
+            <td>350</td>
+            <td>87%</td>
+            <td>$3.50</td>
+            <td>Common</td>
+            <td>7.5/10</td>
+        </tr>
+    </tbody>
+</table>
