--- a/packages/table/src/scss/_component.scss
+++ b/packages/table/src/scss/_component.scss
@@ -21,7 +21,7 @@
   }
 
   &__wrapper {
-    width: 300px;
+    width: 520px;
     overflow-x: auto;
     background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, core.$uq-white), color-stop(100%, rgba(255, 255, 255, 0))), -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, core.$uq-white), color-stop(100%, rgba(255, 255, 255, 0))), -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, core.$uq-neutral-dark20), color-stop(100%, rgba(195, 195, 197, 0))), -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, core.$uq-neutral-dark20), color-stop(100%, rgba(195, 195, 197, 0)));
     background-image: -webkit-linear-gradient(left, core.$uq-white, rgba(255, 255, 255, 0)), -webkit-linear-gradient(right, core.$uq-white, rgba(255, 255, 255, 0)), -webkit-linear-gradient(left, core.$uq-neutral, rgba(195, 195, 197, 0)), -webkit-linear-gradient(right, core.$uq-neutral, rgba(195, 195, 197, 0));
@@ -62,7 +62,6 @@
   thead {
     display: table-header-group;
     vertical-align: middle;
-    background-color: rgba(core.$uq-neutral, 0.2);
   }
 
   &__body,
@@ -97,6 +96,7 @@
     text-align: left;
     border: 1px solid core.$uq-neutral;
     font-weight: core.$font-weight-bold;
+    background-color: rgba(core.$uq-neutral, 0.2);
   }
 
   &__header {
@@ -106,6 +106,9 @@
     }
     &--width-10 {
       width: 10%;
+    }
+    &--width-16 {
+      width: 16.66%;
     }
     &--width-20 {
       width: 20%;
@@ -145,4 +148,52 @@
       }
     }
   }
+
+  
+  // Table - Flex
+  &--flex {
+    @media (max-width: 640px) {
+      thead {
+        left: -9999px;
+        position: absolute;
+        visibility: hidden;
+      }
+      tr {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-bottom: 1rem;
+      }
+      th, td {
+        width: 50%;
+        margin: 0 -1px -1px 0;
+      }
+      td:before {
+        content: attr(data-title);
+        color: core.$uq-purple;
+        font-weight: core.$font-weight-bold;
+        display: block;
+      }
+    }
+  }
+
+
+  // Table - Grid
+  &--grid {
+    tr {
+      display: grid;
+      grid: auto-flow / repeat(6, 1fr);
+    }
+    th,td {
+      margin: 0 -1px -1px 0;
+      word-break: break-word;
+    }
+    @media (max-width: 640px) {
+      tr {
+        grid: auto-flow / repeat(2, 1fr);
+        border-bottom: 2px solid core.$uq-neutral;
+      }
+    }
+  }
+
 }
