Basic table inserted to Body

--- a/packages/storybook-html/src/components/table/table.html
+++ b/packages/storybook-html/src/components/table/table.html
@@ -1,4 +1,4 @@
-<h3>Table - Basic tags</h3>
+<h2>Table - Basic tags & classes(minimal)</h2>
 <div class="uq-table__wrapper">
     <table class="uq-table">
         <caption>Types of food and ratings</caption>
@@ -36,7 +36,7 @@
 
 
 
-<h3>Table - Basic tags & classes</h3>
+<h2>Table - Basic tags & classes</h2>
 <div class="uq-table__wrapper">
   <table class="uq-table">
       <caption class="uq-table__caption">Types of food and ratings</caption>
@@ -74,7 +74,7 @@
 
 
 
-<h3>Table - Flex</h3>
+<h2>Table - Flex</h2>
 <table class="uq-table uq-table--flex">
     <caption>Types of food and ratings</caption>
     <thead>
@@ -110,7 +110,7 @@
 
 
 
-<h3>Table - Grid</h3>
+<h2>Table - Grid</h2>
 <table class="uq-table uq-table--grid">
     <caption>Types of food and ratings</caption>
     <thead>
