--- a/packages/storybook-html/src/components/table/table.html
+++ b/packages/storybook-html/src/components/table/table.html
@@ -1,4 +1,4 @@
-<h2>Table - Basic tags & classes(minimal)</h2>
+<h2>Table - Basic tags with minimal classes</h2>
 <div class="uq-table__wrapper">
     <table class="uq-table">
         <caption>Types of food and ratings</caption>
@@ -14,7 +14,7 @@
         </thead>
         <tbody>
             <tr>
-                <th scope="row">Slice of Pizza</th>
+                <td>Slice of Pizza</td>
                 <td>450</td>
                 <td>95%</td>
                 <td>$5.00</td>
@@ -22,7 +22,7 @@
                 <td>8/10</td>
             </tr>
             <tr>
-                <th scope="row">Hamburger</th>
+                <td>Hamburger</td>
                 <td>350</td>
                 <td>87%</td>
                 <td>$3.50</td>
@@ -36,7 +36,7 @@
 
 
 
-<h2>Table - Basic tags & classes</h2>
+<h2>Table - Basic tags with classes</h2>
 <div class="uq-table__wrapper">
   <table class="uq-table">
       <caption class="uq-table__caption">Types of food and ratings</caption>
@@ -52,7 +52,7 @@
       </thead>
       <tbody class="uq-table__body">
           <tr class="uq-table__row">
-              <th class="uq-table__cell" scope="row">Slice of Pizza</th>
+              <td class="uq-table__cell">Slice of Pizza</td>
               <td class="uq-table__cell uq-table__cell--align-right">450</td>
               <td class="uq-table__cell uq-table__cell--align-right">95%</td>
               <td class="uq-table__cell uq-table__cell--align-right">$5.00</td>
@@ -60,7 +60,7 @@
               <td class="uq-table__cell uq-table__cell--align-right">8/10</td>
           </tr>
           <tr class="uq-table__row">
-            <th class="uq-table__cell" scope="row">Hamburger</th>
+            <td class="uq-table__cell">Hamburger</td>
             <td class="uq-table__cell uq-table__cell--align-right">350</td>
             <td class="uq-table__cell uq-table__cell--align-right">87%</td>
             <td class="uq-table__cell uq-table__cell--align-right">$3.50</td>
@@ -70,75 +70,3 @@
       </tbody>
   </table>
 </div>
-
-
-
-
-<h2>Table - Flex</h2>
-<table class="uq-table uq-table--flex">
-    <caption>Types of food and ratings</caption>
-    <thead>
-        <tr>
-            <th>Type of Food</th>
-            <th>Calories</th>
-            <th>Tasty Factor</th>
-            <th>Average Price</th>
-            <th>Rarity</th>
-            <th>Average Rating</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th data-title="Type of Food" scope="row">Slice of Pizza</th>
-            <td data-title="Calories">450</td>
-            <td data-title="Tasty Factor">95%</td>
-            <td data-title="Average Price">$5.00</td>
-            <td data-title="Rarity">Common</td>
-            <td data-title="Average Rating">8/10</td>
-        </tr>
-        <tr>
-            <th data-title="Type of Food" scope="row">Hamburger</th>
-            <td data-title="Calories">350</td>
-            <td data-title="Tasty Factor">87%</td>
-            <td data-title="Average Price">$3.50</td>
-            <td data-title="Rarity">Common</td>
-            <td data-title="Average Rating">7.5/10</td>
-        </tr>
-    </tbody>
-</table>
-
-
-
-
-<h2>Table - Grid</h2>
-<table class="uq-table uq-table--grid">
-    <caption>Types of food and ratings</caption>
-    <thead>
-        <tr>
-            <th scope="col">Type of Food</th>
-            <th scope="col">Calories</th>
-            <th scope="col">Tasty Factor</th>
-            <th scope="col">Average Price</th>
-            <th scope="col">Rarity</th>
-            <th>Average Rating</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th scope="row">Slice of Pizza</th>
-            <td>450</td>
-            <td>95%</td>
-            <td>$5.00</td>
-            <td>Common</td>
-            <td>8/10</td>
-        </tr>
-        <tr>
-            <th scope="row">Hamburger</th>
-            <td>350</td>
-            <td>87%</td>
-            <td>$3.50</td>
-            <td>Common</td>
-            <td>7.5/10</td>
-        </tr>
-    </tbody>
-</table>
