--- a/packages/table/src/scss/_component.scss
+++ b/packages/table/src/scss/_component.scss
@@ -147,7 +147,7 @@
         background: rgba(core.$uq-neutral, 0.2);
       }
     }
-  }
+  } 
 
 
   // Table - Flex
@@ -196,4 +196,42 @@
     }
   }
 
+}
+
+
+.align-right {
+  text-align: right !important;
+}
+.width-10 {
+  width: 10%;
+}
+.width-16 {
+  width: 16.66%;
+}
+.width-20 {
+  width: 20%;
+}
+.width-25 {
+  width: 25%;
+}
+.width-30 {
+  width: 30%;
+}
+.width-33 {
+  width: 33.33%;
+}
+.width-50 {
+  width: 50%;
+}
+.width-60 {
+  width: 60%;
+}
+.width-75 {
+  width: 75%;
+}
+.width-80 {
+  width: 80%;
+}
+.width-90 {
+  width: 90%;
 }
