Table feedback changes

--- a/packages/storybook-html/src/components/table/table-flex.html
+++ b/packages/storybook-html/src/components/table/table-flex.html
@@ -3,12 +3,12 @@
     <caption>Types of food and ratings</caption>
     <thead>
         <tr>
-            <th>Type of Food</th>
-            <th>Calories</th>
-            <th>Tasty Factor</th>
-            <th>Average Price</th>
-            <th>Rarity</th>
-            <th>Average Rating</th>
+            <th scope="col">Type of Food</th>
+            <th scope="col">Calories</th>
+            <th scope="col">Tasty Factor</th>
+            <th scope="col">Average Price</th>
+            <th scope="col">Rarity</th>
+            <th scope="col">Average Rating</th>
         </tr>
     </thead>
     <tbody>
