--- a/packages/storybook-html/src/components/table/table-grid.html
+++ b/packages/storybook-html/src/components/table/table-grid.html
@@ -13,20 +13,20 @@
     </thead>
     <tbody>
         <tr>
-            <td>Slice of Pizza</td>
-            <td>450</td>
-            <td>95%</td>
-            <td>$5.00</td>
-            <td>Common</td>
-            <td>8/10</td>
+            <td data-title="Type of Food">Slice of Pizza</td>
+            <td data-title="Calories">450</td>
+            <td data-title="Tasty Factor">95%</td>
+            <td data-title="Average Price">$5.00</td>
+            <td data-title="Rarity">Common</td>
+            <td data-title="Average Rating">8/10</td>
         </tr>
         <tr>
-            <td>Hamburger</td>
-            <td>350</td>
-            <td>87%</td>
-            <td>$3.50</td>
-            <td>Common</td>
-            <td>7.5/10</td>
+            <td data-title="Type of Food">Hamburger</td>
+            <td data-title="Calories">350</td>
+            <td data-title="Tasty Factor">87%</td>
+            <td data-title="Average Price">$3.50</td>
+            <td data-title="Rarity">Common</td>
+            <td data-title="Average Rating">7.5/10</td>
         </tr>
     </tbody>
 </table>
