--- a/packages/storybook-html/src/components/table/table.html
+++ b/packages/storybook-html/src/components/table/table.html
@@ -42,30 +42,30 @@
       <caption class="uq-table__caption">Types of food and ratings</caption>
       <thead class="uq-table__head">
           <tr class="uq-table__row">
-              <th scope="col" class="uq-table__header uq-table__header--width-16">Type of Food</th>
-              <th scope="col" class="uq-table__header uq-table__header--width-16">Calories</th>
-              <th scope="col" class="uq-table__header uq-table__header--width-16">Tasty Factor</th>
-              <th scope="col" class="uq-table__header uq-table__header--width-16">Average Price</th>
-              <th scope="col" class="uq-table__header uq-table__header--width-16">Rarity</th>
-              <th scope="col" class="uq-table__header uq-table__header--width-16">Average Rating</th>
+              <th scope="col" class="uq-table__header">Type of Food</th>
+              <th scope="col" class="uq-table__header">Calories</th>
+              <th scope="col" class="uq-table__header">Tasty Factor</th>
+              <th scope="col" class="uq-table__header">Average Price</th>
+              <th scope="col" class="uq-table__header">Rarity</th>
+              <th scope="col" class="uq-table__header">Average Rating</th>
           </tr>
       </thead>
       <tbody class="uq-table__body">
           <tr class="uq-table__row">
               <td class="uq-table__cell">Slice of Pizza</td>
-              <td class="uq-table__cell uq-table__cell--align-right">450</td>
-              <td class="uq-table__cell uq-table__cell--align-right">95%</td>
-              <td class="uq-table__cell uq-table__cell--align-right">$5.00</td>
+              <td class="uq-table__cell">450</td>
+              <td class="uq-table__cell">95%</td>
+              <td class="uq-table__cell">$5.00</td>
               <td class="uq-table__cell">Common</td>
-              <td class="uq-table__cell uq-table__cell--align-right">8/10</td>
+              <td class="uq-table__cell">8/10</td>
           </tr>
           <tr class="uq-table__row">
             <td class="uq-table__cell">Hamburger</td>
-            <td class="uq-table__cell uq-table__cell--align-right">350</td>
-            <td class="uq-table__cell uq-table__cell--align-right">87%</td>
-            <td class="uq-table__cell uq-table__cell--align-right">$3.50</td>
-            <td>Common</td>
-            <td class="uq-table__cell uq-table__cell--align-right">7.5/10</td>
+            <td class="uq-table__cell">350</td>
+            <td class="uq-table__cell">87%</td>
+            <td class="uq-table__cell">$3.50</td>
+            <td class="uq-table__cell">Common</td>
+            <td class="uq-table__cell">7.5/10</td>
           </tr>
       </tbody>
   </table>
